<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Poker Ledger</string>

    <string name="error_enter_buy_in">You must enter a buy in amount.</string>
    <string name="error_enter_cash_out">You must enter a cash out amount.</string>
    <string name="error_enter_location">You must select a location.</string>
    <string name="error_enter_game">You must select a game.</string>
    <string name="error_enter_format">You must select a format.</string>
    <string name="error_enter_blinds">You must select the blinds.</string>
    <string name="error_enter_entrants">You must enter the number of entrants.</string>
    <string name="error_enter_placed">You must enter what position you placed.</string>
    <string name="error_enter_start_date">Select a start date for this session.</string>
    <string name="error_enter_start_time">Select a start time for this session.</string>
    <string name="error_enter_end_date">Select a end date for this session.</string>
    <string name="error_enter_end_time">Select a end time for this session.</string>
    <string name="error_enter_break_start_date">Select a start date for this break.</string>
    <string name="error_enter_break_start_time">Select a start time for this break.</string>
    <string name="error_enter_break_end_date">Select a end date for this break.</string>
    <string name="error_enter_break_end_time">Select a end time for this break.</string>
    <string name="error_negative_length">Session end time must be after start time.</string>
    <string name="error_negative_break_length">End date/time must be after start date/time.</string>
    <string name="error_break_start_early">The break can\'t start before the session\'s start date/time.</string>
    <string name="error_break_end_late">The break can\'t end after the session\'s end date/time.</string>
    <string name="error_break_overlap">The break cannot overlap with another break in this session.</string>
    <string name="error_enter_break">Set start/end date/time before adding breaks.</string>
    <string name="error_single_blind">Blinds not added. If there is only one blind enter it in SB.</string>
    <string name="error_points_plus">Blinds not added. You cannot enter other blinds when using points.</string>
    <string name="error_straddle_no_blinds">Blinds not added. You must enter a SB and BB to enter a straddle.</string>
    <string name="error_no_game_name">You must enter a game name or press cancel.</string>
    <string name="error_no_game_format_name">You must enter a game format name or press cancel.</string>
    <string name="error_no_location_name">You must enter a location name or press cancel.</string>

    <string name="info_set_default_blinds">is now your default blinds.</string>
    <string name="info_remove_default_blinds">is no longer your default blinds.</string>
    <string name="info_delete_blinds">Blind set deleted.</string>
    <string name="info_set_default_game">is now your default game.</string>
    <string name="info_remove_default_game">is no longer your default game.</string>
    <string name="info_delete_game">Game deleted.</string>
    <string name="info_set_default_game_format">is now your default game format.</string>
    <string name="info_remove_default_game_format">is no longer your default game format.</string>
    <string name="info_delete_game_format">Game format deleted.</string>
    <string name="info_set_default_location">is now your default location.</string>
    <string name="info_remove_default_location">is no longer your default location.</string>
    <string name="info_delete_location">Location deleted.</string>
    <string name="info_db_backup">Database saved to downloads folder as</string>
    <string name="info_export_cvs">Database exported to downloads folder as</string>
    <string name="info_autoexport_cvs">Database restore point has been exported to downloads folder as</string>
    <string name="info_db_overwritten">Database overwritten with backup.</string>
    <string name="info_import_complete">The CSV import is complete.</string>
    <string name="info_db_merge">Database merged with backup.</string>

    <string name="info_no_breaks">There are no breaks associated with this session.</string>

    <string name="more">More</string>

    <string name="welcome_header">Welcome!</string>
    <string name="welcome">Thanks for using Poker Ledger! To get started adding your first poker session, click the "+" in the Actionbar.</string>

    <string name="active_session_activity_name">Active Session</string>
    <string name="finish_session_activity_name">Finish Session</string>
    <string name="edit_session_activity_name">Edit Session</string>
    <string name="graphs_activity_name">Graphs</string>
    <string name="history_activity_name">History</string>
    <string name="notes_activity_name">Notes</string>
    <string name="statistics_activity_name">Statistics</string>
    <string name="settings_activity_name">Settings</string>
    <string name="filter_activity_name">Filters</string>

    <string name="locations_header">locations</string>
    <string name="games_header">games</string>
    <string name="game_format_header">game formats</string>
    <string name="blinds_header">blinds</string>
    <string name="backup_header">create pldb backup or restore from pldb</string>
    <string name="backup_loc_header">Backup location</string>
    <string name="export_header">export CSV</string>
    <string name="import_header">import CSV</string>
    <string name="import_description">If you are importing a CSV that was exported from another tracking software you will need to contact support@pokerledger.com to get it converted to the proper format.</string>
    <string name="timeframe_header">Timeframe</string>
    <string name="buy_in_header">buy in</string>
    <string name="profit_header">buy in / cash out</string>
    <string name="tournament_header">tournament info</string>
    <string name="active_session_length_header">start time</string>
    <string name="finished_session_length_header">start time / end time</string>
    <string name="breaks_header">breaks</string>
    <string name="notes_header">notes</string>
    <string name="export_csv_header">export .csv</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_session">Add Session</string>
    <string name="action_view_graphs">Graphs</string>
    <string name="action_view_history">History</string>
    <string name="action_view_notes">Notes</string>
    <string name="action_view_settings">Settings</string>
    <string name="action_filter">Filters</string>
    <string name="action_statistics">Statistics</string>

    <string name="game_prompt">Select Game</string>
    <string name="location_prompt">Select Location</string>
    <string name="blinds_prompt">Select Blind</string>
    <string name="game_format_prompt">Select Game Format</string>

    <string name="tourney_radio_text">Tournament</string>
    <string name="cash_radio_text">Cash Game</string>

    <string name="buy_in_hint">Buy In</string>
    <string name="cash_out_hint">Cash Out</string>
    <string name="entrants_hint">Entrants</string>
    <string name="placed_hint">Placed</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="view_breaks_hint">View Breaks</string>
    <string name="add_break_hint">Add Break</string>
    <string name="add_note_hint">Add Note</string>
    <string name="notes_hint">Notes</string>
    <string name="save_hint">Save</string>
    <string name="finish_hint">Finish</string>
    <string name="backup_hint">Backup</string>
    <string name="backup_loc_hint">Backup folder location</string>
    <string name="export_hint">Export CSV</string>
    <string name="import_hint">Import CSV</string>
    <string name="restore_hint">Restore</string>
    <string name="export_csv_hint">Export as .csv</string>
    <string name="rebuy_hint">Amount</string>
    <string name="previous_hint">\u003C</string>
    <string name="next_hint">\u003E</string>

    <string name="sb_hint">SB</string>
    <string name="bb_hint">BB</string>
    <string name="straddle_hint">Straddle</string>
    <string name="bring_hint">Bring In</string>
    <string name="ante_hint">Ante</string>
    <string name="points_hint">\u0024/point</string>

    <string name="create_location_hint">Location Name</string>
    <string name="create_game_hint">Game Name</string>
    <string name="create_game_format_hint">Game Format Name</string>
    <string name="create_button_hint">Create</string>

    <string name="enter_note_hint">Enter Note</string>

    <string name="cancel_hint">Cancel</string>

    <string name="overview_header">Overview</string>
    <string name="best_header">Best Results</string>
    <string name="breakdown_header">Breakdown</string>
    <string name="summary_header">Summary</string>
    <string name="active_games_header">Active Games</string>

    <string name="profit_vs_time_graph_header">Profit Over Time</string>
    <string name="profit_by_day_of_week_graph_header">Profit By Day of Week</string>

    <string name="profit_label">Profit</string>
    <string name="time_played_label">Time Played</string>
    <string name="wage_label">Hourly Wage</string>

    <string name="per_hour">/hr</string>
    <string name="best_game">Game:</string>
    <string name="best_location">Location:</string>

    <string name="preferences_file_key">com.pokerledger.app.shared_prefs</string>

    <string-array name="timeblocks_array">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>All</item>
    </string-array>

    <string-array name="date_format_array">
        <item>YYYY-MM-DD</item>
        <item>DD-MM-YYYY</item>
        <item>MM-DD-YYYY</item>
    </string-array>
</resources>
