<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/add_session"
        android:title="@string/action_add_session"
        android:icon="@drawable/ic_add_white_18dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/graphs"
        android:title="@string/action_view_graphs"
        android:icon="@drawable/ic_graph_white_18dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/statistics"
        android:icon="@drawable/ic_stats_white_18dp"
        android:title="@string/action_statistics"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/history"
        android:title="@string/action_view_history"
        android:icon="@drawable/ic_history_white_18dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_white_18dp"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/settings"
        android:title="@string/action_view_settings"
        android:icon="@drawable/ic_settings_white_18dp"
        app:showAsAction="ifRoom" />
</menu>