<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/Activity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/save_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/unit4"
        android:paddingRight="@dimen/unit4"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/save_hint"
            android:onClick="saveFinishedSession"
            android:textSize="16sp" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/save_wrapper">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buy_in_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/profit_tiny_header"
                    android:text="@string/profit_header"
                    style="@style/TinyHeader" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/buy_in"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/buy_in_hint"
                        android:inputType="numberDecimal"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/cash_out"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/cash_out_hint"
                        android:inputType="numberDecimal"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/location_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/location_tiny_header"
                    android:text="@string/locations_header"
                    style="@style/TinyHeader" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/new_location"
                        android:drawableStart="@drawable/ic_add_black_18dp"
                        android:drawableLeft="@drawable/ic_add_black_18dp"
                        style="@style/buttonRowItem"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:onClick="showCreateLocationDialog" />

                    <Spinner
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/new_location"
                        android:layout_toStartOf="@id/new_location"
                        android:prompt="@string/location_prompt" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/game_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/game_tiny_header"
                    android:text="@string/games_header"
                    style="@style/TinyHeader" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/new_game"
                        android:drawableStart="@drawable/ic_add_black_18dp"
                        android:drawableLeft="@drawable/ic_add_black_18dp"
                        style="@style/buttonRowItem"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:onClick="showCreateGameDialog" />

                    <Spinner
                        android:id="@+id/game"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/new_game"
                        android:layout_toStartOf="@id/new_game"
                        android:prompt="@string/game_prompt" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/game_format_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/game_format_tiny_header"
                    android:text="@string/game_format_header"
                    style="@style/TinyHeader" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/new_game_format"
                        android:drawableStart="@drawable/ic_add_black_18dp"
                        android:drawableLeft="@drawable/ic_add_black_18dp"
                        style="@style/buttonRowItem"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:onClick="showCreateGameFormatDialog" />

                    <Spinner
                        android:id="@+id/game_format"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/new_game_format"
                        android:layout_toStartOf="@id/new_game_format"
                        android:prompt="@string/game_format_prompt" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cash_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/blinds_tiny_header"
                    android:text="@string/blinds_header"
                    style="@style/TinyHeader" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/new_blinds"
                        android:drawableStart="@drawable/ic_add_black_18dp"
                        android:drawableLeft="@drawable/ic_add_black_18dp"
                        style="@style/buttonRowItem"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:onClick="showCreateBlindsDialog" />

                    <Spinner
                        android:id="@+id/blinds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/new_blinds"
                        android:layout_toStartOf="@id/new_blinds"
                        android:prompt="@string/blinds_prompt" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tournament_wrapper"
                style="@style/WrapperTinyHeader"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tournament_tiny_header"
                    android:text="@string/tournament_header"
                    style="@style/TinyHeader" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/entrants"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/entrants_hint"
                        android:inputType="number"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/placed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/placed_hint"
                        android:inputType="number"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/time_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/session_length_tiny_header"
                    android:text="@string/finished_session_length_header"
                    style="@style/TinyHeader" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/start_time_wrapper"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/start_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/start_date_hint"
                        android:onClick="showDatePickerDialog"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/start_time_hint"
                        android:onClick="showTimePickerDialog"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/end_time_wrapper"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/end_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/end_date_hint"
                        android:onClick="showDatePickerDialog"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/end_time_hint"
                        android:onClick="showTimePickerDialog"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/breaks_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/breaks_tiny_header"
                    android:text="@string/breaks_header"
                    style="@style/TinyHeader" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/view_breaks"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/view_breaks_hint"
                        android:onClick="showBreaksDialog"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/add_break"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:hint="@string/add_break_hint"
                        android:onClick="showCreateBreakDialog"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/notes_wrapper"
                style="@style/WrapperTinyHeader">

                <TextView
                    android:id="@+id/notes_tiny_header"
                    android:text="@string/notes_header"
                    style="@style/TinyHeader" />

                <EditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="1"
                    android:maxLines="5"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine|textCapSentences"
                    android:hint="@string/notes_hint"
                    android:maxLength="300"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>